# pyknp-eventgraph

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  license.rst
docs/source/reference/: argument.rst  base.rst  base_phrase.rst  basic_phrase.rst  component.rst  document.rst  event.rst  eventgraph.rst  features.rst  index.rst  pas.rst  predicate.rst  relation.rst  sentence.rst  token.rst  utils.rst  visualizer.rst
examples/: build_eventgraph.py  classify_event_volition.py  extract_event_pairs.py  load_eventgraph.py  save_eventgraph.py  visualize_eventgraph.py
pyknp_eventgraph/: __init__.py  argument.py  base.py  base_phrase.py  basic_phrase.py  builder.py  cli.py  component.py  content.py  document.py  event.py  eventgraph.py  features.py  helper.py  map.py  pas.py  predicate.py  relation.py  sentence.py  token.py  utils.py  visualizer.py
tests/: test_eventgraph_build.py  test_eventgraph_load.py
tests/json_files/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json
tests/knp_files/: 001.knp  002.knp  003.knp  004.knp  005.knp  006.knp  007.knp  008.knp  009.knp  010.knp  011.knp  012.knp  013.knp  014.knp  015.knp  016.knp  017.knp
