[tool.poetry]
name = "pyknp-eventgraph"
version = "6.1.4"
description = "A development platform for high-level NLP applications in Japanese"
license = "BSD-3-Clause"
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ku-nlp/pyknp-eventgraph"
documentation = "https://pyknp-eventgraph.readthedocs.io/en/latest/"
keywords = [
    "NLP",
    "JUMAN",
    "KNP"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
packages = [
    { include = "pyknp_eventgraph" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyknp = "^0.4.6"
graphviz = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
parameterized = "^0.8.1"

[tool.poetry.scripts]
evg = 'pyknp_eventgraph.cli:evg'
evgviz = 'pyknp_eventgraph.cli:evgviz'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
