[tool.poetry]
name = "pyknp-eventgraph"
version = "6.2.1"
description = "A development platform for high-level NLP applications in Japanese"
license = "BSD-3-Clause"
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ku-nlp/pyknp-eventgraph"
documentation = "https://pyknp-eventgraph.readthedocs.io/en/latest/"
keywords = [
    "NLP",
    "JUMAN",
    "KNP"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
packages = [
    { include = "pyknp_eventgraph" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyknp = "^0.5.0"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
parameterized = "^0.8.1"
black = "^21.4b1"
isort = "^5.8.0"

[tool.poetry.scripts]
evg = 'pyknp_eventgraph.cli:evg'
evgviz = 'pyknp_eventgraph.cli:evgviz'

[tool.black]
line-length = 120
target-version = [
    'py36',
    'py37',
    'py38'
]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
src_paths = ["pyknp_eventgraph", "tests"]
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
