[metadata]
name = pyknp-eventgraph
version = file: pyknp_eventgraph/VERSION
author = Kurohashi-Kawahara Lab, Kyoto University
author_email = contact@nlp.ist.i.kyoto-u.ac.jp
description = A a development platform for high-level NLP applications in Japanese
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ku-nlp/pyknp-eventgraph
keywords = NLP, JUMAN, KNP
license = BSD 3-Clause
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    pyknp
    graphviz
setup_requires =
    pytest-runner
tests_require =
    pytest
    parameterized
python_requires = >=3.6

[options.entry_points]
console_scripts =
    evg = pyknp_eventgraph.cli:build_eventgraph
    evgviz = pyknp_eventgraph.cli:visualize_eventgraph

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
